# Cross-Platform-GL-Application

./: CMakeLists.txt  LICENSE  README.md  main.cpp
glshift/: GLManager.cpp  GLManager.h  GLRenderer.cpp  GLRenderer.h  GLShift.h  definitions.h
lib/win/x64/: glew32.exp  glfw3.lib
lib/win/x86/: glew32.exp  glew32.lib  glfw3.lib
shaders/: simple_fragment.glsl  simple_vertex.glsl
